--- a/variables-lesson.html
+++ b/variables-lesson.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Variables</title>
+        <title>Variables Lesson
+        </title>
     </head>
     <body>
         <script>
@@ -28,6 +29,15 @@
 
             // Editing Re-Written Variable + Console Log
             var1+=1; console.log(var1)
+
+            // Declaring Constants
+            const var3=33;
+            console.log(var3);
+
+            // Declare STR constant and return its datatype as well.
+            const text2='This is JS'
+            console.log(text2);
+            console.log(typeof text2);
 
         </script>
     </body>
